# pptx-html-bridge

./: README.md  pyproject.toml  setup.py
demos/: convert_demo.py
pptx_html_bridge/: __init__.py  converter.py  converters.py  fonts.py  html_generators.py  layout_processors.py  themes.py  utils.py
